# ECEN156-CodeFiles

./: .gitignore
ClassesFollowAlong/: CMakeLists.txt  cat_class
ClassesFollowAlong/src/: cat_class.cpp  pet_class.cpp  pet_class.h  recursion.cpp  turtle_class.cpp
ProjectFiles/: CMakeLists.txt
ProjectFiles/headers/: base_classes.h  hotel_classes.h  reservation_list.h  system_classes.h
ProjectFiles/src/: base_classes.cpp  hotel_classes.cpp  reservation_list.cpp  system_classes.cpp
ProjectFiles/tests/: hotel_test_week5.cpp  hotel_test_week6.cpp  hotel_test_week7.cpp  reservation_list_test.cpp
Week1/Week1Assignment/: CMakeLists.txt
Week1/Week1Assignment/src/: array_functions.cpp  array_functions.h
Week1/Week1Assignment/tests/: array_functions_test.cpp
Week2/Week2Assignment/: CMakeLists.txt
Week2/Week2Assignment/src/: hotel_management.cpp  hotel_management.h
Week2/Week2Assignment/tests/: hotel_management_test.cpp
Week2/Week2FollowAlong/src/: library_live_coding.cpp
Week3/Week3Assignment/: CMakeLists.txt
Week3/Week3Assignment/src/: guest_management.cpp  guest_management.h
Week3/Week3Assignment/tests/: guest_management_test.cpp
Week3/Week3FollowAlong/: CMakeLists.txt
Week3/Week3FollowAlong/src/: pointers_live_coding_restructured.cpp
Week4/Week4FollowAlong/src/: advanced_pointers_practice.cpp
Week5/: CMakeLists.txt
Week5/src/: week5_classes_followalong.cpp
Week6FollowAlong/: week6_lecture_polymorphism.cpp  weeks5_6_practice_lab.cpp
